@@ -177,7 +177,7 @@
    */
   private function filmograf(&$res,$type) {
     if ($this->page["Name"] == "") $this->openpage ("Name","person");
-    preg_match("!<a name=\"$type\"(.*?)<div (id|class)=\">!msi",$this->page["Name"],$match);
+    preg_match("!<a name=\"$type\"(.*?)(<div id=\"filmo|<script)!msi",$this->page["Name"],$match);
     if (empty($type)) $match[1] = $this->page["Name"];
     elseif (empty($match[1])) {
       $pos   = strpos($this->page['Name'],'<a name="'.ucfirst($type).'"');
@@ -192,9 +192,9 @@
       $year = '';
       for ($i=0;$i<$mc;++$i) {
         $char = array();
-        if (preg_match('!<span class="year_column">(\d{4})(.*?)</span>!ims',$matches[1][$i],$ty)) $year = $ty[1];
-        preg_match('!href="/title/tt(\d{7})/"\s*>(.*?)</a>\s*</b>(.*?)<br!ims',$matches[1][$i],$mov);
-        if ( preg_match('!href="/character/ch(\d{7})"\s*>(.*?)</a>!ims',$matches[1][$i],$char) ) {
+        if (preg_match('!<span class="year_column">[^<]*(\d{4})(.*?)</span>!ims',$matches[1][$i],$ty)) $year = $ty[1];
+        preg_match('!href="/title/tt(\d{7})/[^"]*"\s*>(.*?)</a>\s*</b>(.*?)<br!ims',$matches[1][$i],$mov);
+        if ( preg_match('!href="/character/ch(\d{7})[^"]*"\s*>(.*?)</a>!ims',$matches[1][$i],$char) ) {
           $chid   = $char[1];
           $chname = $char[2];
         } else {
